improvements to swagger doc
